use global SSL cert, set up Jenkins slaving and job

--- a/site_cookbooks/fda-proto/templates/default/appvhost.conf.erb
+++ b/site_cookbooks/fda-proto/templates/default/appvhost.conf.erb
@@ -1,10 +1,10 @@
 <VirtualHost *:80>
 	RewriteEngine On
-	ServerName gsa-fda-proto-jenkins.egt-labs.com
+	ServerName gsa-fda-proto.egt-labs.com
 	ServerAlias <%= node.fqdn %> <%= node.hostname %>
 	RewriteRule ^(.*)$ https://%{HTTP_HOST}$1 [R=301,L]
-	CustomLog <%= node['apache']['log_dir'] %>/jenkins-access.log combined
-	ErrorLog <%= node['apache']['log_dir'] %>/jenkins-error.log
+	CustomLog <%= node['apache']['log_dir'] %>/app-access.log combined
+	ErrorLog <%= node['apache']['log_dir'] %>/app-error.log
 </VirtualHost>
 
 <Proxy *>
@@ -14,7 +14,7 @@
 
 <VirtualHost *:443>
 	ServerAdmin john.stange@eglobaltech.com
-	ServerName gsa-fda-proto-jenkins.egt-labs.com
+	ServerName gsa-fda-proto.egt-labs.com
 	ServerAlias <%= node.fqdn %> <%= node.hostname %>
 	ProxyPass / http://localhost:8080/
 	ProxyPassReverse / http://localhost:8080/
@@ -24,7 +24,7 @@
 #	SSLCertificateChainFile /etc/httpd/ssl/gd_bundle.cer
 	SSLProxyEngine on
 
-	CustomLog <%= node['apache']['log_dir'] %>/jenkins-ssl-access.log combined
-	ErrorLog <%= node['apache']['log_dir'] %>/jenkins-error.log
+	CustomLog <%= node['apache']['log_dir'] %>/app-ssl-access.log combined
+	ErrorLog <%= node['apache']['log_dir'] %>/app-error.log
 
 </VirtualHost>
